fix broken 404 link, fix phantom links on mobile menu

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,6 +1,7 @@
-header{
-  background-color:$color_dark_green;
-  .mobile-header{
+header {
+  background-color: $color_dark_green;
+
+  .mobile-header {
     display: none;
     height: 52px;
     padding: 0 20px;
@@ -49,7 +50,7 @@ header{
           &:nth-child(3) {
             width: 50%;
             top: 80%;
-      }
+          }
         }
       }
 
@@ -80,19 +81,21 @@ header{
 
     @media only screen and (max-width:540px) {
       display: flex;
-     }
+    }
   }
-  nav.desktop-nav{
-    max-width:1100px;
+
+  nav.desktop-nav {
+    max-width: 1100px;
     margin: 0 auto;
     display: grid;
     grid-template-rows: minmax(50px, 1fr);
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
 
-    div{
+    div {
       text-align: center;
       height: 100%;
-      p{
+
+      p {
         display: inline-block;
         color: $color_white;
         font-size: 16px;
@@ -100,51 +103,66 @@ header{
         padding: 0;
         margin: 0;
       }
-      &:hover, &:focus, &:active{
-        p{
+
+      &:hover,
+      &:focus,
+      &:active {
+        p {
           color: $color_yellow;
         }
       }
-      a{
-        &:active div p{
-          color:$color_yellow;
+
+      a {
+        &:active div p {
+          color: $color_yellow;
         }
       }
     }
-    @media only screen and (max-width: 540px){
-      display:none;
+
+    @media only screen and (max-width: 540px) {
+      display: none;
     }
   }
-    @media only screen and (max-width: 540px) {
+
+  @media only screen and (max-width: 540px) {
     nav.desktop-nav {
-       display: block;
-        position: absolute;
-        height: 0;
-        transition: height 0.5s;
+      display: block;
+      position: absolute;
+      height: 0;
+      transition: height 0.5s;
 
-        a {
-          div {
-            text-align: unset;
-            padding: 0 0 0 20px;
-            border-left: none;
-            display: block;
-            background-color: $color_white;
-            opacity: 0;
-            transition: opacity 0.5s;
-            width: 100%;
+      a {
+        text-decoration: none;
 
-            p {
-              color: $color_dark_blue;
-            }
+        div {
+          text-align: unset;
+          padding: 0 0 0 20px;
+          border-left: none;
+          display: block;
+          background-color: $color_white;
+          opacity: 0;
+          transition: opacity 0.5s;
+          width: 100%;
 
-            &:last-child {
-              border-right: none;
-            }
-           }
-        }
+          p {
+            color: $color_dark_blue;
+            display: none;
+          }
 
           &:last-child {
-          div{
+            border-right: none;
+          }
+        }
+      }
+
+      &.expanded {
+        height: 50px;
+        margin: 0 0 -20px;
+        z-index: 100;
+        width: calc(100% - 20px);
+
+        a:last-child {
+          div {
             padding-bottom: 20px;
             position: relative;
 
@@ -154,19 +172,18 @@ header{
               top: 55px;
               left: calc(50% - 64px);
               right: calc(50% - 64px);
-              border: solid 1px lightgrey;
+              border: solid 1px $color_grey_very_light;
             }
           }
-      }
-      &.expanded{
-        height: 50px;
-        margin: 0 0 -20px;
-        z-index: 100;
-        width: 100%;
-        width: calc(100% - 20px);
+        }
 
         div {
-            opacity: 1;
+          opacity: 1;
+
+          p {
+            display: inline;
+            text-decoration: none;
+          }
         }
       }
     }
